--- a/src/components/cardList/table.template.html
+++ b/src/components/cardList/table.template.html
@@ -12,8 +12,7 @@
           <i class="w-3 fa fa-circle-info"></i>
         </button>
       </div>
-      {{/srch}}
-      {{#srch}}
+      {{/srch}} {{#srch}}
       <div class="flex-auto" style="max-width: 16px"></div>
       {{/srch}}
       <div class="font-normal">
@@ -32,7 +31,6 @@
       </div>
       <div class="flex action-wrapper"></div>
       <div class="flex justify-end flex-auto ml-1">
-
         <div class="mt-3 button-toggle" role="group">
           <button
             type="button"
@@ -168,29 +166,24 @@
     style="min-height: 450px; height: calc(100vh - 250px)"
     tabindex="-1"
   >
-    <table class="table cardlist_table" data-layout="grid">
-      <thead>
-        <tr>
-          <th class="w-0 !p-0">
-            <!-- マス表示 -->
-          </th>
-          <th class="w-16 text-center xl:w-28">
-            <span class="xl:hidden">No.</span
-            ><span class="hidden xl:inline">ナンバー</span>
-          </th>
-          <th class="text-center w-14 md:w-16">マス数</th>
-          <th class="w-16 text-center md:w-24">
-            <span class="xl:hidden">SP</span
-            ><span class="hidden xl:inline">スペシャル<br />ポイント</span>
-          </th>
-          <th class="w-1 text-center sm:w-20 md:w-1 lg:w-20">
-            <span class="hidden sm:inline md:hidden lg:inline">レア度</span>
-          </th>
-          <th class="text-start">名前</th>
-          <th class="w-14"></th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
+    <div class="cardlist_table" data-layout="grid">
+      <div class="cardlist_table_head">
+        <div class="text-center col-no">
+          <span class="xl:hidden">No.</span
+          ><span class="hidden xl:inline">ナンバー</span>
+        </div>
+        <div class="text-center col-gridcount">マス数</div>
+        <div class="text-center col-sp">
+          <span class="xl:hidden">SP</span
+          ><span class="hidden xl:inline">スペシャル<br />ポイント</span>
+        </div>
+        <div class="text-center col-rarity">
+          <span class="hidden sm:inline md:hidden lg:inline">レア度</span>
+        </div>
+        <div class="col-name">名前</div>
+        <div class="col-action"></div>
+      </div>
+      <ul class="cardlist_table_body"></ul>
+    </div>
   </div>
 </div>
