レイアウトの再計算を抑制する

--- a/src/components/cardList/table.template.html
+++ b/src/components/cardList/table.template.html
@@ -162,28 +162,27 @@
     {{/srch}}
   </div>
   <div
-    class="relative flex-grow flex-shrink-0 overflow-y-scroll"
-    style="min-height: 450px; height: calc(100vh - 250px)"
+    class="cardlist_table"
     tabindex="-1"
+    data-layout="grid"
   >
-    <div class="cardlist_table" data-layout="grid">
-      <div class="cardlist_table_head">
-        <div class="text-center col-no">
-          <span class="xl:hidden">No.</span
-          ><span class="hidden xl:inline">ナンバー</span>
-        </div>
-        <div class="text-center col-gridcount">マス数</div>
-        <div class="text-center col-sp">
-          <span class="xl:hidden">SP</span
-          ><span class="hidden xl:inline">スペシャル<br />ポイント</span>
-        </div>
-        <div class="text-center col-rarity">
-          <span class="hidden sm:inline md:hidden lg:inline">レア度</span>
-        </div>
-        <div class="col-name">名前</div>
-        <div class="col-action"></div>
+    <div class="cardlist_table_head">
+      <div class="text-center col-no">
+        <span class="xl:hidden">No.</span
+        ><span class="hidden xl:inline">ナンバー</span>
       </div>
-      <ul class="cardlist_table_body"></ul>
+      <div class="text-center col-gridcount">マス数</div>
+      <div class="text-center col-sp">
+        <span class="xl:hidden">SP</span
+        ><span class="hidden xl:inline">スペシャル<br />ポイント</span>
+      </div>
+      <div class="text-center col-rarity">
+        <span class="hidden sm:inline md:hidden lg:inline">レア度</span>
+      </div>
+      <div class="col-name">名前</div>
+      <div class="col-action"></div>
     </div>
+    <ul class="cardlist_table_body"></ul>
   </div>
 </div>
+
