--- a/src/components/deck/deckRow.template.html
+++ b/src/components/deck/deckRow.template.html
@@ -5,7 +5,7 @@
   </td>
   <td class="space-x-1">
     <button type="button" title="デッキを編集する" data-action="edit" class="button button-xs button-primary">
-      <i class="fa-solid fa-pen-to-square"></i>
+      <i class="fa-solid fa-folder-open"></i>
     </button>
     <button type="button" title="デッキを削除する" data-action="delete" class="button button-xs button-danger">
       <i class="fa fa-trash-can"></i>
