デッキ情報画面からデッキコードを発行できるようにする

--- a/src/components/deck/deckRow.template.html
+++ b/src/components/deck/deckRow.template.html
@@ -10,7 +10,7 @@
     <button type="button" title="デッキを削除する" data-action="delete" class="button button-xs button-danger">
       <i class="fa fa-trash-can"></i>
     </button>
-    <button type="button" title="共有リンクを作成" data-action="share" class="button button-xs button-default">
+    <button type="button" title="デッキ共有リンクを作成" data-action="share" class="button button-xs button-default">
       <i class="fa-solid fa-share-from-square"></i>
     </button>
   </td>
