--- a/src/components/deckShare/shareBody.template.html
+++ b/src/components/deckShare/shareBody.template.html
@@ -5,7 +5,7 @@
   <div>
     <label class="form-label form-label-input">デッキコード</label>
     <div class="relative">
-      <input class="w-full pr-12 form-input" type="text" value="{{code}}" />
+      <input class="w-full pr-12 form-input" type="text" readonly value="{{code}}" />
       <button
         data-copy="デッキコード"
         class="absolute top-0 bottom-0 right-0 px-3 rounded-l-none button button-primary"
@@ -18,7 +18,7 @@
   <div class="mt-3">
     <label class="form-label form-label-input">デッキURL</label>
     <div class="relative">
-      <input class="w-full pr-12 form-input" type="text" value="{{url}}" />
+      <input class="w-full pr-12 form-input" type="text" readonly value="{{url}}" />
       <button
         data-copy="url"
         class="absolute top-0 bottom-0 right-0 px-3 rounded-l-none button button-primary"
