--- a/src/components/cardList/deckInfoModalBody.template.html
+++ b/src/components/cardList/deckInfoModalBody.template.html
@@ -24,7 +24,7 @@
     </div>
   </div>
   <div class="mt-3 text-center">マス数分布</div>
-  <div class="flex justify-center h-16 mb-4 space-x-1">
+  <div class="flex justify-center h-16 space-x-1 mb-7">
     {{#gcs}}
     <div class="relative w-3 bg-gray-200 dark:bg-gray-400">
       <div
@@ -39,4 +39,17 @@
     </div>
     {{/gcs}}
   </div>
+  {{#count}}
+  <div class="text-center">
+    <button
+      type="button"
+      title="デッキ共有リンクを作成"
+      data-action="share"
+      class="button button-xs button-default"
+    >
+      <i class="mr-2 fa-solid fa-share-from-square"></i><span>デッキ共有リンクを作成</span>
+    </button>
+  </div>
+  {{/count}}
 </div>
+
