検索ボックスの挙動を修正

--- a/src/components/cardList/table.template.html
+++ b/src/components/cardList/table.template.html
@@ -130,7 +130,7 @@
           <div class="relative" data-clearable>
             <input
               class="pr-16 form-input input_cardlist_serch"
-              type="search"
+              type="text"
               placeholder="カード名"
             />
             <button
