fix: cardlist visual issue

--- a/src/components/cardList/table.template.html
+++ b/src/components/cardList/table.template.html
@@ -161,20 +161,19 @@
     </div>
     {{/srch}}
   </div>
-  <div
-    class="cardlist_table"
-    tabindex="-1"
-    data-layout="grid"
-  >
+  <div class="cardlist_table" tabindex="-1" data-layout="grid">
     <div class="cardlist_table_head">
       <div class="text-center col-no">
         <span class="xl:hidden">No.</span
         ><span class="hidden xl:inline">ナンバー</span>
       </div>
-      <div class="text-center col-gridcount">マス数</div>
-      <div class="text-center col-sp">
-        <span class="xl:hidden">SP</span
-        ><span class="hidden xl:inline">スペシャル<br />ポイント</span>
+      <div class="justify-center flex items-center col-gridcount">
+        <div class="n-fill w-2 h-2 mr-px"></div>
+        <span>マス</span>
+      </div>
+      <div class="justify-center flex items-center col-sp">
+        <div class="sp-fill w-2 h-2 mr-px"></div>
+        <span>SP</span>
       </div>
       <div class="text-center col-rarity">
         <span class="hidden sm:inline md:hidden lg:inline">レア度</span>
@@ -185,4 +184,3 @@
     <ul class="cardlist_table_body"></ul>
   </div>
 </div>
-
