--- a/src/components/cardList/row.template.html
+++ b/src/components/cardList/row.template.html
@@ -17,15 +17,20 @@
       <span class="value">{{n}}</span>
     </div>
   </div>
-  <div class="cardlist_table_item card_gridcount" title="マス数">{{gridCount}}</div>
+  <div class="cardlist_table_item card_gridcount" title="マス数">
+    <span>{{gridCount}}</span>
+  </div>
   <div class="cardlist_table_item card_sp" title="スペシャルポイント">
-    <div class="inline-block sp-fill"></div>
-    <i class="mx-1 fa fa-xmark"></i><span>{{sp}}</span>
+    <div class="sp-fill w-3 h-3"></div>
+    <i class="mx-1 fa fa-xmark text-[10px]"></i
+    ><span class="card_sp_label">{{sp}}</span>
   </div>
   <div class="cardlist_table_item card_rarity" title="レア度">
     <div class="rarity_label"><span>{{rarity}}</span></div>
   </div>
-  <div class="cardlist_table_item card_name" title="カード名"><span>{{ja}}</span></div>
+  <div class="cardlist_table_item card_name" title="カード名">
+    <span class="card_name_label">{{ja}}</span>
+  </div>
   <div class="cardlist_table_item card_action">
     {{#notDeck}}
     <button
