--- a/src/styles/custom-components.pcss
+++ b/src/styles/custom-components.pcss
@@ -1,5 +1,12 @@
+.n-fill,
 .sp-fill {
-  @apply z-0 border w-3 h-3 box-content border-gray-800 dark:border-black bg-amber-600;
+  @apply z-0 border box-content border-gray-800 dark:border-black;
+}
+.n-fill {
+  @apply bg-yellow-300;
+}
+.sp-fill {
+  @apply bg-amber-600;
 }
 [data-selected="1"] {
   .icon-check {
@@ -25,10 +32,8 @@
   height: calc(100vh - 250px);
 }
 .cardlist_table_head {
-  @apply text-xs text-gray-700 bg-gray-50 dark:bg-gray-700 dark:text-gray-400;
-}
-.cardlist_table_row {
-  @apply bg-white border-b dark:bg-gray-900 dark:border-gray-700;
+  @apply text-xs text-gray-700 dark:text-gray-400;
+  @apply bg-gray-50 dark:bg-gray-700;
 }
 .card_grid {
   @apply px-0;
@@ -72,14 +77,21 @@
   @apply !bg-blue-100 dark:!bg-blue-600 dark:!bg-opacity-20;
 }
 [data-layout="table"] {
+  @apply grid grid-cols-[var(--col-no)_var(--col-gridcount)_var(--col-sp)_var(--col-rarity)_var(--col-name)_var(--col-action)];
+  @apply [--col-no:56px] [--col-gridcount:56px] [--col-sp:56px] [--col-rarity:8px] [--col-name:auto] [--col-action:56px];
+  @apply sm:[--col-rarity:80px];
+  @apply md:[--col-gridcount:64px] md:[--col-sp:64px] md:[--col-rarity:4px];
+  @apply lg:[--col-no:64px] lg:[--col-gridcount:72px] lg:[--col-sp:72px] lg:[--col-rarity:80px] lg:[--col-action:64px];
+  @apply xl:[--col-no:112px];
   .cardlist_table_head {
-    @apply flex sticky top-0 z-10 py-1 items-center;
+    @apply grid grid-cols-subgrid items-center col-span-6;
+    @apply sticky top-0 z-10 py-1;
   }
   .cardlist_table_body {
-    @apply block;
+    @apply contents;
   }
   .cardlist_table_row {
-    @apply flex flex-nowrap w-full items-center;
+    @apply grid grid-cols-subgrid items-center col-span-6 bg-white border-b dark:bg-gray-900 dark:border-gray-700;
     &:hover,
     &:active {
       .grid__wrapper {
@@ -104,7 +116,7 @@
     }
   }
   .cardlist_table_item {
-    @apply p-2;
+    @apply p-2 lg:px-4;
   }
   .grid__wrapper {
     @apply hidden absolute z-10;
@@ -114,28 +126,22 @@
   }
   .col-no,
   .card_no {
-    @apply w-16 xl:w-28;
+    @apply col-start-1;
   }
   .card_no > * {
     @apply justify-between;
   }
-  .col-gridcount,
-  .card_gridcount {
-    @apply w-14 md:w-16;
-  }
   .card_gridcount {
     @apply text-end;
   }
-  .col-sp,
-  .card_sp {
-    @apply w-16 md:w-24;
-  }
   .card_sp {
     @apply text-center;
-  }
-  .col-rarity,
-  .card_rarity {
-    @apply w-2 sm:w-20 md:w-1 lg:w-20;
+    > * {
+      @apply hidden;
+    }
+    .card_sp_label {
+      @apply inline;
+    }
   }
   .card_rarity {
     @apply text-center px-0 text-xs;
@@ -148,11 +154,10 @@
   }
   .col-name,
   .card_name {
-    @apply pl-2 text-start flex-grow;
-  }
-  .col-action,
-  .card_action {
-    @apply w-14;
+    @apply pl-2 text-start;
+    .card_name_label {
+      @apply whitespace-pre-wrap;
+    }
   }
   .card_action {
     @apply text-center;
@@ -167,7 +172,7 @@
     @apply flex flex-wrap gap-2 py-2;
   }
   .cardlist_table_row {
-    @apply inline-grid transform-cpu drop-shadow-md shadow-black border-gray-400 dark:border-gray-700 dark:shadow-white grid-cols-8 w-40 row-auto border-2 rounded-lg p-1;
+    @apply inline-grid bg-white transform-cpu drop-shadow-md shadow-black border-gray-400 dark:bg-gray-900 dark:border-gray-700 dark:shadow-white grid-cols-8 w-40 row-auto border-2 rounded-lg p-1;
   }
   .cardlist_table_item {
     @apply block border-none px-1 py-0;
@@ -192,7 +197,7 @@
   }
   [data-card_rarity="1"] {
     .card_gridcount {
-      @apply after:bg-gradient-to-b after:from-yellow-500 after:via-amber-700   after:to-yellow-700 after:border-amber-900;
+      @apply after:bg-gradient-to-b after:from-yellow-500 after:via-amber-700 after:to-yellow-700 after:border-amber-900;
     }
   }
   [data-card_rarity="2"] {
