--- a/src/styles/components.pcss
+++ b/src/styles/components.pcss
@@ -77,7 +77,7 @@
   @apply text-gray-500 bg-white hover:bg-gray-100 focus:ring-blue-300 border border-gray-200 hover:text-gray-900 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600;
 }
 .button-default {
-  @apply text-gray-900 bg-white border border-gray-300 hover:bg-gray-100 focus:ring-gray-200 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700;
+  @apply text-gray-900 bg-white border border-gray-300 hover:bg-gray-100 focus:ring-gray-200 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-600 dark:hover:border-gray-600 dark:focus:ring-gray-700;
 }
 .button-sm {
   @apply focus:ring-4 px-3 py-2 rounded-md text-sm;
@@ -92,7 +92,7 @@
     @apply rounded-none first:rounded-l-lg first:border-l last:rounded-r-lg;
   }
   .button-active {
-    @apply text-blue-600 bg-blue-50 hover:bg-blue-100 hover:text-blue-700 dark:bg-gray-700 dark:text-white;
+    @apply text-blue-600 bg-blue-50 hover:bg-blue-100 hover:text-blue-700 dark:bg-gray-700 dark:text-white dark:hover:bg-gray-600 dark:hover:text-gray-50;
   }
 }
 
