--- a/src/components/cardList/table.template.html
+++ b/src/components/cardList/table.template.html
@@ -58,9 +58,9 @@
       >
         <div class="flex flex-wrap mb-3 -ml-3">
           <div class="flex items-center mt-2 ml-6" title="マス数">
-            <div class="p-3 mt-2 mr-5 text-xs gridcount">
+            <div class="p-3 mt-4 mr-5 text-xs gridcount">
               <div
-                class="absolute text-xs font-normal -translate-x-1/2 left-1/2 -top-4 whitespace-nowrap"
+                class="absolute text-xs font-normal -translate-x-1/2 left-1/2 -top-5 whitespace-nowrap"
               >
                 マス数
               </div>
@@ -92,9 +92,9 @@
             </div>
           </div>
           <div class="flex items-center mt-2 ml-6" title="スペシャルポイント">
-            <div class="relative p-px mx-2 mt-2 sp-fill">
+            <div class="relative w-3 h-3 mx-2 mt-4 sp-fill">
               <div
-                class="absolute text-xs font-normal -translate-x-1/2 left-1/2 -top-5 whitespace-nowrap"
+                class="absolute text-xs font-normal -translate-x-1/2 left-1/2 -top-6 whitespace-nowrap"
               >
                 sp
               </div>
@@ -168,7 +168,7 @@
         ><span class="hidden xl:inline">ナンバー</span>
       </div>
       <div class="justify-center flex items-center col-gridcount">
-        <div class="n-fill w-2 h-2 mr-px"></div>
+        <div class="gridcount after:w-3 after:h-3 mr-3"></div>
         <span>マス</span>
       </div>
       <div class="justify-center flex items-center col-sp">
