chore: setting prettier

--- a/src/components/deckShare/shareBody.html.mustache
+++ b/src/components/deckShare/shareBody.html.mustache
@@ -1,14 +1,12 @@
 <div>
-  <div class="mb-4 text-xs">
-    デッキURLをブラウザで開くと、デッキの内容がデッキ編集画面に読み込まれます。
-  </div>
+  <div class="mb-4 text-xs">デッキURLをブラウザで開くと、デッキの内容がデッキ編集画面に読み込まれます。</div>
   <div>
     <label class="form-label form-label-input">デッキコード</label>
     <div class="relative">
-      <input class="w-full pr-12 form-input" type="text" readonly value="{{code}}" />
+      <input class="form-input w-full pr-12" type="text" readonly value="{{code}}" />
       <button
         data-copy="デッキコード"
-        class="absolute top-0 bottom-0 right-0 px-3 rounded-l-none button button-primary"
+        class="button button-primary absolute bottom-0 right-0 top-0 rounded-l-none px-3"
         type="button"
       >
         <i class="fa-regular fa-copy"></i>
@@ -18,10 +16,10 @@
   <div class="mt-3">
     <label class="form-label form-label-input">デッキURL</label>
     <div class="relative">
-      <input class="w-full pr-12 form-input" type="text" readonly value="{{url}}" />
+      <input class="form-input w-full pr-12" type="text" readonly value="{{url}}" />
       <button
         data-copy="url"
-        class="absolute top-0 bottom-0 right-0 px-3 rounded-l-none button button-primary"
+        class="button button-primary absolute bottom-0 right-0 top-0 rounded-l-none px-3"
         type="button"
       >
         <i class="fa-regular fa-copy"></i>
