--- a/src/core/deckEditor/saveDeckBtn.html.mustache
+++ b/src/core/deckEditor/saveDeckBtn.html.mustache
@@ -1,8 +1,4 @@
-<button
-  type="button"
-  title="デッキを保存"
-  class="self-center mt-2 ml-3 button button-primary button-sm"
->
+<button type="button" title="デッキを保存" class="button button-primary button-sm ml-3 mt-2 self-center">
   <i class="fa-solid fa-floppy-disk"></i>
-  <span class="hidden ml-2 xl:inline">保存</span>
+  <span class="ml-2 hidden xl:inline">保存</span>
 </button>
