--- a/src/core/deckList/deckLoadConf.html.mustache
+++ b/src/core/deckList/deckLoadConf.html.mustache
@@ -1,7 +1,5 @@
 <div>
-  <div>
-    編集中のデータがありますが、
-  </div>
+  <div>編集中のデータがありますが、</div>
   <div class="mx-2 my-3">
     <div>{{t}}</div>
     <div class="text-xs">編集: <span>{{d}}</span></div>
