--- a/src/components/cardList/deckInfoModalBody.html.mustache
+++ b/src/components/cardList/deckInfoModalBody.html.mustache
@@ -6,50 +6,30 @@
     </ul>
     <div class="ml-6">
       <div>スペシャルポイント分布</div>
-      <div class="flex justify-center h-16 mb-4 space-x-1">
+      <div class="mb-4 flex h-16 justify-center space-x-1">
         {{#sps}}
         <div class="relative w-4 bg-gray-200 dark:bg-gray-400">
-          <div
-            class="absolute bottom-0 left-0 right-0 z-10 bg-amber-500 dark:bg-amber-600"
-            {{&v}}
-          ></div>
-          <div
-            class="absolute text-xs -translate-x-1/2 whitespace-nowrap -bottom-4 left-1/2"
-          >
-            {{k}}
-          </div>
+          <div class="absolute bottom-0 left-0 right-0 z-10 bg-amber-500 dark:bg-amber-600" {{&v}}></div>
+          <div class="absolute -bottom-4 left-1/2 -translate-x-1/2 whitespace-nowrap text-xs">{{k}}</div>
         </div>
         {{/sps}}
       </div>
     </div>
   </div>
   <div class="mt-3 text-center">マス数分布</div>
-  <div class="flex justify-center h-16 space-x-1 mb-7">
+  <div class="mb-7 flex h-16 justify-center space-x-1">
     {{#gcs}}
     <div class="relative w-3 bg-gray-200 dark:bg-gray-400">
-      <div
-        class="absolute bottom-0 left-0 right-0 z-10 bg-violet-500 dark:bg-violet-600"
-        {{&v}}
-      ></div>
-      <div
-        class="absolute text-xs -translate-x-1/2 whitespace-nowrap -bottom-4 left-1/2"
-      >
-        {{k}}
-      </div>
+      <div class="absolute bottom-0 left-0 right-0 z-10 bg-violet-500 dark:bg-violet-600" {{&v}}></div>
+      <div class="absolute -bottom-4 left-1/2 -translate-x-1/2 whitespace-nowrap text-xs">{{k}}</div>
     </div>
     {{/gcs}}
   </div>
   {{#count}}
   <div class="text-center">
-    <button
-      type="button"
-      title="デッキ共有リンクを作成"
-      data-action="share"
-      class="button button-xs button-default"
-    >
-      <i class="mr-2 fa-solid fa-share-from-square"></i><span>デッキ共有リンクを作成</span>
+    <button type="button" title="デッキ共有リンクを作成" data-action="share" class="button button-xs button-default">
+      <i class="fa-solid fa-share-from-square mr-2"></i><span>デッキ共有リンクを作成</span>
     </button>
   </div>
   {{/count}}
 </div>
-
