--- a/src/components/cardList/row.html.mustache
+++ b/src/components/cardList/row.html.mustache
@@ -11,7 +11,7 @@
   <div class="cardlist_table_item card_no" title="ナンバー">
     <div class="flex items-center">
       {{#notDeck}}
-      <i class="hidden icon-check fa-regular fa-circle-check"></i>
+      <i class="icon-check fa-regular fa-circle-check hidden"></i>
       {{/notDeck}}
       <span></span>
       <span class="value">{{n}}</span>
@@ -21,9 +21,8 @@
     <span>{{gridCount}}</span>
   </div>
   <div class="cardlist_table_item card_sp" title="スペシャルポイント">
-    <div class="sp-fill w-3 h-3"></div>
-    <i class="mx-1 fa fa-xmark text-[10px]"></i
-    ><span class="card_sp_label">{{sp}}</span>
+    <div class="sp-fill h-3 w-3"></div>
+    <i class="fa fa-xmark mx-1 text-[10px]"></i><span class="card_sp_label">{{sp}}</span>
   </div>
   <div class="cardlist_table_item card_rarity" title="レア度">
     <div class="rarity_label"><span>{{rarity}}</span></div>
@@ -33,17 +32,11 @@
   </div>
   <div class="cardlist_table_item card_action">
     {{#notDeck}}
-    <button
-      class="button-add button button-xs button-primary"
-      title="デッキに追加"
-    >
+    <button class="button-add button button-xs button-primary" title="デッキに追加">
       <i class="fa fa-plus"></i>
     </button>
     {{/notDeck}}
-    <button
-      class="button-delete button button-xs button-danger"
-      title="デッキから削除"
-    >
+    <button class="button-delete button button-xs button-danger" title="デッキから削除">
       <i class="fa fa-trash-can"></i>
     </button>
   </div>
