--- a/src/components/cardList/table.html.mustache
+++ b/src/components/cardList/table.html.mustache
@@ -1,22 +1,18 @@
 <div class="deck-tab-item table__wrapper">
   <div class="table-caption-title">
-    <div class="flex flex-wrap items-center -mt-2 -ml-2">
+    <div class="-ml-2 -mt-2 flex flex-wrap items-center">
       <span class="table-title-text">{{title}}</span>
       {{^srch}}
       <div class="mx-3 mt-3" title="デッキ情報">
-        <button
-          type="button"
-          id="button-deck-info"
-          class="button button-sm button-default"
-        >
-          <i class="w-3 fa fa-circle-info"></i>
+        <button type="button" id="button-deck-info" class="button button-sm button-default">
+          <i class="fa fa-circle-info w-3"></i>
         </button>
       </div>
       {{/srch}} {{#srch}}
       <div class="flex-auto" style="max-width: 16px"></div>
       {{/srch}}
       <div class="font-normal">
-        <div class="mt-2 ml-2 w-36">
+        <div class="ml-2 mt-2 w-36">
           <select class="form-input table-sort">
             <option value="0">カードNo(昇順)</option>
             <option value="1">カードNo(降順)</option>
@@ -29,9 +25,9 @@
           </select>
         </div>
       </div>
-      <div class="flex action-wrapper"></div>
-      <div class="flex justify-end flex-auto ml-1">
-        <div class="mt-3 button-toggle" role="group">
+      <div class="action-wrapper flex"></div>
+      <div class="ml-1 flex flex-auto justify-end">
+        <div class="button-toggle mt-3" role="group">
           <button
             type="button"
             data-button_type="grid"
@@ -40,122 +36,64 @@
           >
             <i class="fa-solid fa-table-cells-large"></i>
           </button>
-          <button
-            type="button"
-            data-button_type="table"
-            class="button button-sm button-default"
-            title="リスト表示"
-          >
+          <button type="button" data-button_type="table" class="button button-sm button-default" title="リスト表示">
             <i class="fa-solid fa-list"></i>
           </button>
         </div>
       </div>
     </div>
     {{#srch}}
-    <div class="mt-2 md:mt-3 expandable-wrapper">
-      <form
-        class="expandable cardlist_serch !overflow-hidden flex flex-wrap items-end"
-      >
-        <div class="flex flex-wrap mb-3 -ml-3">
-          <div class="flex items-center mt-2 ml-6" title="マス数">
-            <div class="p-3 mt-4 mr-5 text-xs gridcount">
-              <div
-                class="absolute text-xs font-normal -translate-x-1/2 left-1/2 -top-5 whitespace-nowrap"
-              >
-                マス数
-              </div>
+    <div class="expandable-wrapper mt-2 md:mt-3">
+      <form class="expandable cardlist_serch flex flex-wrap items-end !overflow-hidden">
+        <div class="-ml-3 mb-3 flex flex-wrap">
+          <div class="ml-6 mt-2 flex items-center" title="マス数">
+            <div class="gridcount mr-5 mt-4 p-3 text-xs">
+              <div class="absolute -top-5 left-1/2 -translate-x-1/2 whitespace-nowrap text-xs font-normal">マス数</div>
             </div>
             <div class="w-12">
-              <label
-                for="min-grid"
-                class="mb-1 text-xs form-label form-label-input"
-                >最小</label
-              >
-              <input
-                id="min-grid"
-                type="number"
-                class="p-1 form-input text-end"
-              />
+              <label for="min-grid" class="form-label form-label-input mb-1 text-xs">最小</label>
+              <input id="min-grid" type="number" class="form-input p-1 text-end" />
             </div>
             <span class="mx-2 mt-5">～</span>
             <div class="w-12">
-              <label
-                for="max-grid"
-                class="mb-1 text-xs form-label form-label-input"
-                >最大</label
-              >
-              <input
-                id="max-grid"
-                type="number"
-                class="p-1 form-input text-end"
-              />
+              <label for="max-grid" class="form-label form-label-input mb-1 text-xs">最大</label>
+              <input id="max-grid" type="number" class="form-input p-1 text-end" />
             </div>
           </div>
-          <div class="flex items-center mt-2 ml-6" title="スペシャルポイント">
-            <div class="relative w-3 h-3 mx-2 mt-4 sp-fill">
-              <div
-                class="absolute text-xs font-normal -translate-x-1/2 left-1/2 -top-6 whitespace-nowrap"
-              >
-                sp
-              </div>
+          <div class="ml-6 mt-2 flex items-center" title="スペシャルポイント">
+            <div class="sp-fill relative mx-2 mt-4 h-3 w-3">
+              <div class="absolute -top-6 left-1/2 -translate-x-1/2 whitespace-nowrap text-xs font-normal">sp</div>
             </div>
-            <div class="w-12 ml-3">
-              <label
-                for="min-sp"
-                class="mb-1 text-xs form-label form-label-input"
-                >最小</label
-              >
-              <input
-                id="min-sp"
-                type="number"
-                class="p-1 form-input text-end"
-              />
+            <div class="ml-3 w-12">
+              <label for="min-sp" class="form-label form-label-input mb-1 text-xs">最小</label>
+              <input id="min-sp" type="number" class="form-input p-1 text-end" />
             </div>
             <span class="mx-2 mt-5">～</span>
             <div class="w-12">
-              <label
-                for="max-sp"
-                class="mb-1 text-xs form-label form-label-input"
-                >最大</label
-              >
-              <input
-                id="max-sp"
-                type="number"
-                class="p-1 form-input text-end"
-              />
+              <label for="max-sp" class="form-label form-label-input mb-1 text-xs">最大</label>
+              <input id="max-sp" type="number" class="form-input p-1 text-end" />
             </div>
           </div>
         </div>
-        <div class="flex mb-3 ml-3">
+        <div class="mb-3 ml-3 flex">
           <div class="relative" data-clearable>
-            <input
-              class="pr-16 form-input input_cardlist_serch"
-              type="text"
-              placeholder="カード名"
-            />
-            <button
-              class="absolute top-0 bottom-0 right-0 px-3 rounded-l-none button button-primary"
-              type="submit"
-            >
+            <input class="form-input input_cardlist_serch pr-16" type="text" placeholder="カード名" />
+            <button class="button button-primary absolute bottom-0 right-0 top-0 rounded-l-none px-3" type="submit">
               <i class="fa fa-search"></i>
             </button>
-            <i class="input-clear right-12 fa fa-circle-xmark"></i>
+            <i class="input-clear fa fa-circle-xmark right-12"></i>
           </div>
           <button
             type="button"
-            class="self-end ml-5 mr-1 whitespace-nowrap button_search_clear button button-alt button-xs"
+            class="button_search_clear button button-alt button-xs ml-5 mr-1 self-end whitespace-nowrap"
           >
             クリア
           </button>
         </div>
       </form>
-      <div class="mt-1 -mx-2 -mb-2 md:-mx-4 md:-mb-4">
-        <button
-          type="button"
-          class="block w-full text-center button-default expand-button"
-        >
-          <span class="mr-2 text-sm">詳細検索</span
-          ><i class="fa-solid fa-caret-down"></i>
+      <div class="-mx-2 -mb-2 mt-1 md:-mx-4 md:-mb-4">
+        <button type="button" class="button-default expand-button block w-full text-center">
+          <span class="mr-2 text-sm">詳細検索</span><i class="fa-solid fa-caret-down"></i>
         </button>
       </div>
     </div>
@@ -163,19 +101,18 @@
   </div>
   <div class="cardlist_table" tabindex="-1" data-layout="grid">
     <div class="cardlist_table_head">
-      <div class="text-center col-no">
-        <span class="xl:hidden">No.</span
-        ><span class="hidden xl:inline">ナンバー</span>
+      <div class="col-no text-center">
+        <span class="xl:hidden">No.</span><span class="hidden xl:inline">ナンバー</span>
       </div>
-      <div class="justify-center flex items-center col-gridcount">
-        <div class="gridcount after:w-3 after:h-3 mr-3"></div>
+      <div class="col-gridcount flex items-center justify-center">
+        <div class="gridcount mr-3 after:h-3 after:w-3"></div>
         <span>マス</span>
       </div>
-      <div class="justify-center flex items-center col-sp">
-        <div class="sp-fill w-2 h-2 mr-px"></div>
+      <div class="col-sp flex items-center justify-center">
+        <div class="sp-fill mr-px h-2 w-2"></div>
         <span>SP</span>
       </div>
-      <div class="text-center col-rarity">
+      <div class="col-rarity text-center">
         <span class="hidden sm:inline md:hidden lg:inline">レア度</span>
       </div>
       <div class="col-name">名前</div>
