--- a/src/components/message/base.html.mustache
+++ b/src/components/message/base.html.mustache
@@ -1,11 +1,9 @@
-<div
-  class="relative z-50 w-full max-h-full mt-4 transition-all duration-300 ease-out -my-1.2"
->
+<div class="-my-1.2 relative z-50 mt-4 max-h-full w-full transition-all duration-300 ease-out">
   <div
     class="flex w-5/6 max-w-lg p-3 mx-auto text-sm break-all rounded-lg pointer-events-auto {{bodyClass}}"
     role="alert"
   >
-    <div class="flex items-center flex-shrink-0 w-5 h-5 mr-3 text-base">
+    <div class="mr-3 flex h-5 w-5 flex-shrink-0 items-center text-base">
       <i aria-hidden="true" class="{{icon}}"></i>
     </div>
     <div>{{message}}</div>
