--- a/src/core/deckEditor/saveDeckDialog/saveDeckDialogBody.html.mustache
+++ b/src/core/deckEditor/saveDeckDialog/saveDeckDialogBody.html.mustache
@@ -1,25 +1,17 @@
 <form>
   <div class="mb-5">
-    <label for="input_deck_name" class="form-label form-label-input"
-      >デッキ名</label
-    >
-    <input
-      id="input_deck_name"
-      type="text"
-      class="form-input"
-      placeholder="デッキ名"
-    />
+    <label for="input_deck_name" class="form-label form-label-input">デッキ名</label>
+    <input id="input_deck_name" type="text" class="form-input" placeholder="デッキ名" />
   </div>
-  <label class="flex items-center ml-2">
+  <label class="ml-2 flex items-center">
     <input type="radio" name="saveTo" class="form-radio peer" checked />
-    <span
-      class="form-label form-label-radio peer-checked:text-blue-600 dark:peer-checked:text-blue-500"
-      ><i class="mr-1 fa fa-plus"></i>新規保存</span
+    <span class="form-label form-label-radio peer-checked:text-blue-600 dark:peer-checked:text-blue-500"
+      ><i class="fa fa-plus mr-1"></i>新規保存</span
     >
   </label>
   {{#decks.length}}
-  <div class="mt-3 form-label">上書き</div>
-  <div class="ml-1 overflow-y-auto max-h-36">
+  <div class="form-label mt-3">上書き</div>
+  <div class="ml-1 max-h-36 overflow-y-auto">
     {{#decks}}
     <label class="flex items-center p-1">
       <input
@@ -30,9 +22,7 @@
         data-name="{{t}}"
         data-id="{{id}}"
       />
-      <div
-        class="form-label form-label-radio peer-checked:text-blue-600 dark:peer-checked:text-blue-500"
-      >
+      <div class="form-label form-label-radio peer-checked:text-blue-600 dark:peer-checked:text-blue-500">
         <div class="mr-1">{{t}}</div>
         <div class="text-xs">({{d}})</div>
       </div>
