--- a/src/start/appInfoDialog/modal.html.mustache
+++ b/src/start/appInfoDialog/modal.html.mustache
@@ -1,26 +1,23 @@
 <div>
-  <ul class="mb-3 ml-6 space-y-2 leading-relaxed list-disc">
+  <ul class="mb-3 ml-6 list-disc space-y-2 leading-relaxed">
     <li>
       このサイトは、スプラトゥーン３のナワバトラーのデッキ構築の補助を目的として作成したファンメイドのサイトです。<br />
       ゲームの開発元とは一切関係ありません。
     </li>
+    <li>マス数やスペシャルポイントなどを条件に検索や並べ替えて表示ができます。</li>
     <li>
-      マス数やスペシャルポイントなどを条件に検索や並べ替えて表示ができます。
-    </li>
-    <li>
-      デッキ編集画面で、<i class="px-1 fa fa-circle-info"></i>のアイコンをクリックすると、デッキ内のカードのマス数、スペシャルポイントの分布を確認することができます。
+      デッキ編集画面で、<i class="fa fa-circle-info px-1"></i
+      >のアイコンをクリックすると、デッキ内のカードのマス数、スペシャルポイントの分布を確認することができます。
     </li>
     <li>
       作成したデッキはお使いのブラウザ上に保存できる他、コードを発行してSNSなどで共有することができます。<br />
       （サーバにはユーザの情報を一切送信しておりません。）
     </li>
-    <li>
-      不具合がありましたら、お手数ですが開発者のX(旧:Twitter)までご連絡いただけますと幸いです。
-    </li>
+    <li>不具合がありましたら、お手数ですが開発者のX(旧:Twitter)までご連絡いただけますと幸いです。</li>
   </ul>
   <div>
     <a
-      class="px-3 py-1 text-xs text-white rounded-full bg-black hover:text-gray-200 hover:bg-gray-900"
+      class="rounded-full bg-black px-3 py-1 text-xs text-white hover:bg-gray-900 hover:text-gray-200"
       href="https://twitter.com/khr32"
       title="X"
       target="_blank"
