--- a/src/styles/components.pcss
+++ b/src/styles/components.pcss
@@ -1,39 +1,39 @@
 .table__wrapper {
-  @apply overflow-x-auto relative shadow-md rounded-md sm:rounded-lg border border-gray-200 dark:border-gray-700;
+  @apply relative overflow-x-auto rounded-md border border-gray-200 shadow-md dark:border-gray-700 sm:rounded-lg;
 }
 .table {
-  @apply w-full text-sm text-left text-gray-500 dark:text-gray-400;
+  @apply w-full text-left text-sm text-gray-500 dark:text-gray-400;
   th,
   td {
     @apply p-2;
   }
   thead {
-    @apply text-xs text-gray-700 bg-gray-50 dark:bg-gray-700 dark:text-gray-400;
+    @apply bg-gray-50 text-xs text-gray-700 dark:bg-gray-700 dark:text-gray-400;
   }
   tbody {
     th {
-      @apply font-medium text-gray-900 whitespace-nowrap dark:text-white;
+      @apply whitespace-nowrap font-medium text-gray-900 dark:text-white;
     }
     tr {
-      @apply bg-white border-b dark:bg-gray-900 dark:border-gray-700;
+      @apply border-b bg-white dark:border-gray-700 dark:bg-gray-900;
     }
   }
 }
 .table-caption-title {
-  @apply p-2 md:p-4 text-sm lg:text-base font-medium text-left text-gray-900 bg-white dark:text-white dark:bg-gray-800;
+  @apply bg-white p-2 text-left text-sm font-medium text-gray-900 dark:bg-gray-800 dark:text-white md:p-4 lg:text-base;
 }
 .form-label {
   @apply text-sm font-medium text-gray-900 dark:text-gray-300;
 }
 .form-label-input {
-  @apply block mb-2;
+  @apply mb-2 block;
 }
 .form-input {
-  @apply bg-white border border-gray-500 text-gray-900 text-sm rounded-lg focus:ring-1 focus:ring-blue-500 focus:border-blue-500 block w-full p-2 dark:bg-gray-800 dark:border-gray-400 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500;
+  @apply block w-full rounded-lg border border-gray-500 bg-white p-2 text-sm text-gray-900 focus:border-blue-500 focus:ring-1 focus:ring-blue-500 dark:border-gray-400 dark:bg-gray-800 dark:text-white dark:placeholder-gray-400 dark:focus:border-blue-500 dark:focus:ring-blue-500;
   &:disabled {
-    @apply cursor-not-allowed bg-gray-100 text-gray-700 border-gray-300 dark:bg-zinc-600 dark:border-gray-600 dark:text-zinc-400 dark:placeholder-zinc-500;
+    @apply cursor-not-allowed border-gray-300 bg-gray-100 text-gray-700 dark:border-gray-600 dark:bg-zinc-600 dark:text-zinc-400 dark:placeholder-zinc-500;
   }
-  &[type="number"] {
+  &[type='number'] {
     -moz-appearance: textfield;
     &::-webkit-outer-spin-button,
     &::-webkit-inner-spin-button {
@@ -51,65 +51,65 @@
   @apply ml-2 select-none;
 }
 .form-radio {
-  @apply w-4 h-4 checked:bg-blue-600 bg-white border-gray-500 focus:ring-blue-500 dark:checked:bg-blue-600 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-offset-2 focus:ring-2 dark:bg-gray-800 dark:border-gray-400;
+  @apply h-4 w-4 border-gray-500 bg-white checked:bg-blue-600 focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 dark:border-gray-400 dark:bg-gray-800 dark:ring-offset-gray-800 dark:checked:bg-blue-600 dark:focus:ring-blue-600;
 }
 .input-clear {
-  @apply hidden absolute top-1/2 right-2.5 -translate-y-1/2;
+  @apply absolute right-2.5 top-1/2 hidden -translate-y-1/2;
 }
-[data-clearable="1"] {
+[data-clearable='1'] {
   .input-clear {
     @apply block cursor-pointer text-gray-500 dark:text-gray-100;
   }
 }
 .card {
-  @apply p-4 bg-white rounded-md sm:rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700;
+  @apply rounded-md border border-gray-200 bg-white p-4 shadow-md dark:border-gray-700 dark:bg-gray-800 sm:rounded-lg;
 }
 .button {
-  @apply focus:ring-4 focus:outline-none rounded-lg text-sm font-medium px-5 py-2.5 focus:z-10;
+  @apply rounded-lg px-5 py-2.5 text-sm font-medium focus:z-10 focus:outline-none focus:ring-4;
 }
 .button-primary {
-  @apply text-white bg-blue-700 hover:bg-blue-800 focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800;
+  @apply bg-blue-700 text-white hover:bg-blue-800 focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800;
 }
 .button-danger {
-  @apply text-white bg-red-700 hover:bg-red-800 focus:ring-red-300 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900;
+  @apply bg-red-700 text-white hover:bg-red-800 focus:ring-red-300 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900;
 }
 .button-alt {
-  @apply text-gray-500 bg-white hover:bg-gray-100 focus:ring-blue-300 border border-gray-200 hover:text-gray-900 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600;
+  @apply border border-gray-200 bg-white text-gray-500 hover:bg-gray-100 hover:text-gray-900 focus:ring-blue-300 dark:border-gray-500 dark:bg-gray-700 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:ring-gray-600;
 }
 .button-default {
-  @apply text-gray-900 bg-white border border-gray-300 hover:bg-gray-100 focus:ring-gray-200 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-600 dark:hover:border-gray-600 dark:focus:ring-gray-700;
+  @apply border border-gray-300 bg-white text-gray-900 hover:bg-gray-100 focus:ring-gray-200 dark:border-gray-600 dark:bg-gray-800 dark:text-white dark:hover:border-gray-600 dark:hover:bg-gray-600 dark:focus:ring-gray-700;
 }
 .button-sm {
-  @apply focus:ring-4 px-3 py-2 rounded-md text-sm;
+  @apply rounded-md px-3 py-2 text-sm focus:ring-4;
 }
 .button-xs {
-  @apply focus:ring-4 px-3 py-2 rounded-md text-xs;
+  @apply rounded-md px-3 py-2 text-xs focus:ring-4;
 }
 
 .button-toggle {
-  @apply inline-flex rounded-md shadow-sm -space-x-px;
+  @apply inline-flex -space-x-px rounded-md shadow-sm;
   .button {
     @apply rounded-none first:rounded-l-lg first:border-l last:rounded-r-lg;
   }
   .button-active {
-    @apply text-blue-600 bg-blue-50 hover:bg-blue-100 hover:text-blue-700 dark:bg-gray-700 dark:text-white dark:hover:bg-gray-600 dark:hover:text-gray-50;
+    @apply bg-blue-50 text-blue-600 hover:bg-blue-100 hover:text-blue-700 dark:bg-gray-700 dark:text-white dark:hover:bg-gray-600 dark:hover:text-gray-50;
   }
 }
 
 .tab-group-wrapper {
-  @apply text-sm font-medium text-center text-gray-500 border-b border-gray-200 dark:text-gray-400 dark:border-gray-700;
+  @apply border-b border-gray-200 text-center text-sm font-medium text-gray-500 dark:border-gray-700 dark:text-gray-400;
 }
 .tab-group {
-  @apply flex flex-wrap -mb-px space-x-2;
+  @apply -mb-px flex flex-wrap space-x-2;
 }
 .tab {
-  @apply block cursor-pointer select-none p-3 rounded-t-lg border-b-2 border-transparent;
+  @apply block cursor-pointer select-none rounded-t-lg border-b-2 border-transparent p-3;
 }
 .tab:not(.active) {
-  @apply hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300;
+  @apply hover:border-gray-300 hover:text-gray-600 dark:hover:text-gray-300;
 }
 .tab.active {
-  @apply text-blue-600  border-blue-600 dark:text-blue-500 dark:border-blue-500;
+  @apply border-blue-600  text-blue-600 dark:border-blue-500 dark:text-blue-500;
 }
 
 .expandable-wrapper {
