--- a/src/styles/style.pcss
+++ b/src/styles/style.pcss
@@ -1,9 +1,9 @@
-@import "./override.pcss";
-@import "tailwindcss/base";
-@import "./components.pcss";
-@import "./custom-components.pcss";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@import './override.pcss';
+@import 'tailwindcss/base';
+@import './components.pcss';
+@import './custom-components.pcss';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
 * {
   border: 0 solid #e5e7eb;
@@ -15,17 +15,17 @@ html {
   @apply m-5;
 }
 #themeButtonGroup {
-  @apply absolute p-1 overflow-hidden transition-all duration-300 pointer-events-none w-fit z-40 max-h-0 top-full -left-1;
+  @apply pointer-events-none absolute -left-1 top-full z-40 max-h-0 w-fit overflow-hidden p-1 transition-all duration-300;
 }
 .theme-setting-label {
-  @apply w-0 transition-all duration-300 overflow-hidden whitespace-nowrap;
+  @apply w-0 overflow-hidden whitespace-nowrap transition-all duration-300;
 }
 .theme-settig--is-setting {
   #themeButtonGroup {
     @apply max-h-36;
   }
   .theme-setting-label {
-    @apply w-20 ml-1;
+    @apply ml-1 w-20;
   }
 }
 
