--- a/src/components/cardList/deckInfoModalBody.html.mustache
+++ b/src/components/cardList/deckInfoModalBody.html.mustache
@@ -8,7 +8,7 @@
       <div>スペシャルポイント分布</div>
       <div class="mb-4 flex h-16 justify-center space-x-1">
         {{#sps}}
-        <div class="relative w-4 bg-gray-200 dark:bg-gray-400" title={{k}}>
+        <div class="relative w-4 bg-gray-200 dark:bg-gray-400" title="{{k}}">
           <div class="absolute bottom-0 left-0 right-0 z-10 bg-amber-500 dark:bg-amber-600" {{&v}}></div>
           <div class="absolute -bottom-4 left-1/2 -translate-x-1/2 whitespace-nowrap text-xs">{{k}}</div>
         </div>
@@ -19,7 +19,7 @@
   <div class="mt-3 text-center">マス数分布</div>
   <div class="mb-7 flex h-16 justify-center space-x-1">
     {{#gcs}}
-    <div class="relative w-3 bg-gray-200 dark:bg-gray-400" title={{k}}>
+    <div class="relative w-3 bg-gray-200 dark:bg-gray-400" title="{{k}}">
       <div class="absolute bottom-0 left-0 right-0 z-10 bg-violet-500 dark:bg-violet-600" {{&v}}></div>
       <div class="absolute -bottom-4 left-1/2 -translate-x-1/2 whitespace-nowrap text-xs">{{k}}</div>
     </div>
