replacing tailwindcss/pcss to tailwindcss/vite

--- a/src/components/dialog/dialog.html.mustache
+++ b/src/components/dialog/dialog.html.mustache
@@ -1,7 +1,7 @@
 <div
   tabindex="-1"
   aria-hidden="true"
-  class="pointer-events-auto absolute inset-0 z-50 overflow-y-auto bg-gray-900 bg-opacity-50 transition-opacity dark:bg-opacity-80"
+  class="pointer-events-auto absolute inset-0 z-50 overflow-y-auto bg-gray-900/50 transition-opacity dark:bg-gray-900/80"
 >
   <div tabindex="-1" aria-hidden="true" class="flex h-full flex-col">
     <div class="flex-shrink basis-1/5"></div>
