--- a/src/styles/custom-components.css
+++ b/src/styles/custom-components.css
@@ -74,7 +74,7 @@
   }
 }
 [data-selected='1'] {
-  @apply !bg-blue-100 dark:!bg-blue-600 dark:!bg-opacity-20;
+  @apply !bg-blue-100 dark:!bg-blue-600/20;
 }
 [data-layout='table'] {
   @apply grid grid-cols-[var(--col-no)_var(--col-gridcount)_var(--col-sp)_var(--col-rarity)_var(--col-name)_var(--col-action)] content-start;
@@ -113,7 +113,7 @@
       @apply bg-gray-100 dark:bg-gray-600;
     }
     &[data-selected='1']:hover {
-      @apply bg-blue-200 dark:bg-blue-700 dark:bg-opacity-30;
+      @apply bg-blue-200 dark:bg-blue-700/30;
     }
   }
   .cardlist_table_item {
