--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,37 +1,10 @@
 @import 'tailwindcss';
-@import './override.css';
-@import './components.css';
-@import './custom-components.css';
 @custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
-
 @layer base {
   @import '@fortawesome/fontawesome-free/css/all.css';
+  @import './override.css';
 }
-
-* {
-  border: 0 solid #e5e7eb;
-}
-html {
-  touch-action: manipulation;
-}
-#app-main {
-  @apply m-5;
-}
-#themeButtonGroup {
-  @apply pointer-events-none absolute -left-1 top-full z-40 max-h-0 w-fit overflow-hidden p-1 transition-all duration-300;
-}
-.theme-setting-label {
-  @apply w-0 overflow-hidden whitespace-nowrap transition-all duration-300;
-}
-.theme-settig--is-setting {
-  #themeButtonGroup {
-    @apply max-h-36;
-  }
-  .theme-setting-label {
-    @apply ml-1 w-20;
-  }
-}
-
-* + .nocontent {
-  @apply hidden;
+@layer components {
+  @import './components.css';
+  @import './custom-components.css';
 }
