--- a/src/core/deckEditor/clearBtn.html.mustache
+++ b/src/core/deckEditor/clearBtn.html.mustache
@@ -1,3 +1,3 @@
-<button type="button" title="デッキを空にする" class="button button-sm button-danger ml-1 mt-2 self-center">
+<button type="button" title="デッキを空にする" class="button button-sm button-danger mt-2 ml-1 self-center">
   <i class="fa-solid fa-ban"></i>
 </button>
