--- a/src/components/deckShare/shareBody.html.mustache
+++ b/src/components/deckShare/shareBody.html.mustache
@@ -6,7 +6,7 @@
       <input class="form-input w-full pr-12" type="text" readonly value="{{code}}" />
       <button
         data-copy="デッキコード"
-        class="button button-primary absolute bottom-0 right-0 top-0 rounded-l-none px-3"
+        class="button button-primary absolute top-0 right-0 bottom-0 rounded-l-none px-3"
         type="button"
       >
         <i class="fa-regular fa-copy"></i>
@@ -19,7 +19,7 @@
       <input class="form-input w-full pr-12" type="text" readonly value="{{url}}" />
       <button
         data-copy="url"
-        class="button button-primary absolute bottom-0 right-0 top-0 rounded-l-none px-3"
+        class="button button-primary absolute top-0 right-0 bottom-0 rounded-l-none px-3"
         type="button"
       >
         <i class="fa-regular fa-copy"></i>
