--- a/src/core/deckEditor/saveDeckBtn.html.mustache
+++ b/src/core/deckEditor/saveDeckBtn.html.mustache
@@ -1,4 +1,4 @@
-<button type="button" title="デッキを保存" class="button button-primary button-sm ml-3 mt-2 self-center">
+<button type="button" title="デッキを保存" class="button button-primary button-sm mt-2 ml-3 self-center">
   <i class="fa-solid fa-floppy-disk"></i>
   <span class="ml-2 hidden xl:inline">保存</span>
 </button>
