chore(styles): remove Tailwind config

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,5 +1,8 @@
 @import 'tailwindcss';
 @custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
+@theme {
+  --font-sans: 'Inter', "'Noto Sans JP'", "'Noto Color Emoji'", 'sans';
+}
 @layer base {
   @import '@fortawesome/fontawesome-free/css/all.css';
   @import './override.css';
