--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -1,5 +1,5 @@
 .table__wrapper {
-  @apply relative overflow-x-auto rounded-md border border-gray-200 shadow-md dark:border-gray-700 sm:rounded-lg;
+  @apply relative overflow-x-auto rounded-md border border-gray-200 shadow-md sm:rounded-lg dark:border-gray-700;
 }
 .table {
   @apply w-full text-left text-sm text-gray-500 dark:text-gray-400;
@@ -12,7 +12,7 @@
   }
   tbody {
     th {
-      @apply whitespace-nowrap font-medium text-gray-900 dark:text-white;
+      @apply font-medium whitespace-nowrap text-gray-900 dark:text-white;
     }
     tr {
       @apply border-b bg-white dark:border-gray-700 dark:bg-gray-900;
@@ -20,7 +20,7 @@
   }
 }
 .table-caption-title {
-  @apply bg-white p-2 text-left text-sm font-medium text-gray-900 dark:bg-gray-800 dark:text-white md:p-4 lg:text-base;
+  @apply bg-white p-2 text-left text-sm font-medium text-gray-900 md:p-4 lg:text-base dark:bg-gray-800 dark:text-white;
 }
 .form-label {
   @apply text-sm font-medium text-gray-900 dark:text-gray-300;
@@ -54,7 +54,7 @@
   @apply h-4 w-4 border-gray-500 bg-white checked:bg-blue-600 focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 dark:border-gray-400 dark:bg-gray-800 dark:ring-offset-gray-800 dark:checked:bg-blue-600 dark:focus:ring-blue-600;
 }
 .input-clear {
-  @apply absolute right-2.5 top-1/2 hidden -translate-y-1/2;
+  @apply absolute top-1/2 right-2.5 hidden -translate-y-1/2;
 }
 [data-clearable='1'] {
   .input-clear {
@@ -62,10 +62,10 @@
   }
 }
 .card {
-  @apply rounded-md border border-gray-200 bg-white p-4 shadow-md dark:border-gray-700 dark:bg-gray-800 sm:rounded-lg;
+  @apply rounded-md border border-gray-200 bg-white p-4 shadow-md sm:rounded-lg dark:border-gray-700 dark:bg-gray-800;
 }
 .button {
-  @apply rounded-lg px-5 py-2.5 text-sm font-medium focus:z-10 focus:outline-none focus:ring-4;
+  @apply rounded-lg px-5 py-2.5 text-sm font-medium focus:z-10 focus:ring-4 focus:outline-none;
 }
 .button-primary {
   @apply bg-blue-700 text-white hover:bg-blue-800 focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800;
@@ -103,7 +103,7 @@
   @apply -mb-px flex flex-wrap space-x-2;
 }
 .tab {
-  @apply block cursor-pointer select-none rounded-t-lg border-b-2 border-transparent p-3;
+  @apply block cursor-pointer rounded-t-lg border-b-2 border-transparent p-3 select-none;
 }
 .tab:not(.active) {
   @apply hover:border-gray-300 hover:text-gray-600 dark:hover:text-gray-300;
@@ -130,7 +130,7 @@
 }
 
 #themeButtonGroup {
-  @apply pointer-events-none absolute -left-1 top-full z-40 max-h-0 w-fit overflow-hidden p-1 transition-all duration-300;
+  @apply pointer-events-none absolute top-full -left-1 z-40 max-h-0 w-fit overflow-hidden p-1 transition-all duration-300;
 }
 .theme-setting-label {
   @apply w-0 overflow-hidden whitespace-nowrap transition-all duration-300;
